err/eulcommon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/billiard'...
Listing './lib/python3.5/site-packages/billiard/dummy'...
Listing './lib/python3.5/site-packages/billiard-3.5.0.3.dist-info'...
Listing './lib/python3.5/site-packages/celery'...
Listing './lib/python3.5/site-packages/celery/app'...
Listing './lib/python3.5/site-packages/celery/apps'...
Listing './lib/python3.5/site-packages/celery/backends'...
Listing './lib/python3.5/site-packages/celery/backends/database'...
Listing './lib/python3.5/site-packages/celery/bin'...
Listing './lib/python3.5/site-packages/celery/concurrency'...
Listing './lib/python3.5/site-packages/celery/contrib'...
Listing './lib/python3.5/site-packages/celery/contrib/testing'...
Listing './lib/python3.5/site-packages/celery/events'...
Listing './lib/python3.5/site-packages/celery/fixups'...
Listing './lib/python3.5/site-packages/celery/loaders'...
Listing './lib/python3.5/site-packages/celery/security'...
Listing './lib/python3.5/site-packages/celery/task'...
Listing './lib/python3.5/site-packages/celery/utils'...
Listing './lib/python3.5/site-packages/celery/utils/dispatch'...
Listing './lib/python3.5/site-packages/celery/utils/static'...
Listing './lib/python3.5/site-packages/celery/worker'...
Listing './lib/python3.5/site-packages/celery/worker/consumer'...
Listing './lib/python3.5/site-packages/celery-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/eulcommon'...
Listing './lib/python3.5/site-packages/eulcommon/binfile'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/auth'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/http'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult/migrations'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult/templates'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult/templates/images'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult/templates/taskresult'...
Listing './lib/python3.5/site-packages/eulcommon/djangoextras/taskresult/templates/taskresult/snippets'...
Listing './lib/python3.5/site-packages/eulcommon/searchutil'...
Listing './lib/python3.5/site-packages/eulcommon/searchutil/templates'...
Listing './lib/python3.5/site-packages/eulcommon/searchutil/templates/searchutil'...
Listing './lib/python3.5/site-packages/eulcommon/searchutil/templatetags'...
Listing './lib/python3.5/site-packages/eulcommon-0.19.0.egg-info'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/async/aws'...
Listing './lib/python3.5/site-packages/kombu/async/aws/sqs'...
Listing './lib/python3.5/site-packages/kombu/async/http'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/__init__.py'...
***   File "./lib/python3.5/site-packages/test/__init__.py", line 25
    print '** import test/__init__'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
